preventing ribbon-banner remaining static covering content as you scroll down, now scrolls up wth rest of the content

--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,10 @@ header {
   background: url("images/icons/bag-icon.png") center no-repeat;
 }
 /* ribbon banner */
-
+.homepage-section {
+padding-top: 2%;
+background-color: #fbfbfd;
+}
 .section-content-covid {
 	width: 100%;
 	max-width: 100%;
@@ -91,11 +94,7 @@ header {
 	text-align: center;
 	max-width: 900px;
 }
-.covid-ribbon-copy.variant{
-  justify-content: center;
-  flex-direction: row;
-  text-align: center;
-}
+
 @media only screen and (max-width: 1068px) {
 .section-content {
 		width: 692px;
@@ -158,7 +157,7 @@ header {
 /* iphone13pro section */
 
 .iphone-13-pro {
-  padding-top: 5em;
+  padding-top: 0.5em;
   font-size: 56px;
     line-height: 1.07143;
     font-weight: 600;
